<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ListaCompra"
    tools:showIn="@layout/activity_lista_compra">

    <TextView
        android:id="@+id/lblSeleccionado"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/lblSeleccionado"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvCantidad"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btnVolver"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="oyente_btnVolver"
        android:text="@string/btnVolver"
        android:textColor="#353333"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"/>

</LinearLayout>